--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -53,7 +53,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="TextView" />
+                android:text="系统权限" />
         </LinearLayout>
 
         <LinearLayout
@@ -67,10 +67,31 @@
                 android:layout_width="218dp"
                 android:layout_height="40dp"
                 android:layout_weight="1"
-                android:text="申请系统权限" />
+                android:text="申请存储权限" />
 
             <Button
                 android:id="@+id/button"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:text="请求" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="55dp"
+            android:layout_weight="1"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView_powersave"
+                android:layout_width="218dp"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:text="省电模式" />
+
+            <Button
+                android:id="@+id/button_powersave"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
                 android:layout_weight="1"
