--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -145,7 +145,7 @@
                 android:text="Yolov5测试" />
 
             <Button
-                android:id="@+id/button2"
+                android:id="@+id/buttonStartYolo"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
                 android:layout_weight="1"
