--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -139,7 +139,7 @@
 
             <TextView
                 android:id="@+id/textView"
-                android:layout_width="228dp"
+                android:layout_width="118dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Yolov5测试" />
@@ -149,7 +149,20 @@
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
                 android:layout_weight="1"
-                android:text="识别" />
+                android:text="TorchScript" />
+
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="10" />
+
+            <Button
+                android:id="@+id/buttonStartTf"
+                android:layout_width="wrap_content"
+                android:layout_height="40dp"
+                android:layout_weight="1"
+                android:text="TF-Lite" />
+
         </LinearLayout>
 
         <LinearLayout
