添加app白名单管理功能

--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -101,6 +101,7 @@
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="5dp"
                     android:checked="@={appInfo.isInWhiteList}"
+                    android:onClick="@{(view) -> listener.appInfoListItemClicked(view, appInfo)}"
                     android:gravity="right" />
             </RelativeLayout>
         </LinearLayout>
