--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -185,6 +185,24 @@
             android:layout_weight="1"
             android:orientation="horizontal">
 
+            <Switch
+                android:id="@+id/switchIsDebug"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="20dp"
+                android:layout_weight="1"
+                android:text="开启调试"
+                android:textColor="#7E7E7E" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_marginBottom="20dp"
+            android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/textView9"
                 android:layout_width="313dp"
